k8s-manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: spring-petclinic
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: "/api/customer/(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: customers-service
                port:
                  number: 8080

          - path: "/api/visit/(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: visits-service
                port:
                  number: 8080

          - path: "/api/vet/(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: vets-service
                port:
                  number: 8080

          - path: "/(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: petclinic-frontend
                port:
                  number: 8080
